[package]
name = "methods-enum"
version = "0.2.2"
edition = "2021"
authors = ["Vladimir Shardinov <vvshard@gmail.com>"]
description = "Attribute-like macro for 'state' and state machine' design patterns, without dyn Trait (based on generated enum)."
documentation = "https://docs.rs/methods-enum"
repository = "https://github.com/vvshard/methods-enum"
license = "MIT OR Apache-2.0"
categories = ["rust-patterns"]
keywords = ["macro", "methods", "enum", "state", "pattern"]

[lib]
proc-macro = true
